# See: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "known-types"
description = "Well-known types."
readme = "README.md"
authors = [{ name = "Arto Bendiken", email = "arto@bendiken.net" }]
license = "Unlicense"
license-files = ["UNLICENSE"]
version = "0.0.0"

requires-python = ">=3.10"
dependencies = ["pydantic>=2.12"]

keywords = []
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
apify = []
crates = []
github = []
gravatar = []
ietf = []
introco = []
linkupapi = []
luma = []
meetup = []
npm = []
pypi = []
rubygems = []
twitterapi = []
w3c = []

[project.urls]
Homepage = "https://github.com/it-is-known"
Repository = "https://github.com/it-is-known/known-types"
Changelog = "https://github.com/it-is-known/known-types/blob/master/python/CHANGES.md"
Releases = "https://github.com/it-is-known/known-types/releases"
Issues = "https://github.com/it-is-known/known-types/issues"
Documentation = "https://github.com/it-is-known/known-types/blob/master/python/README.md"
